scripts/.ipynb_checkpoints/slurm-25312770-checkpoint.out
  File "/global/scratch/projects/fc_mvslab/OpenProjects/Sanjana/consensus_AD_predictor/scripts/run_adpred.py", line 103
    %%time
    ^
SyntaxError: invalid syntax
